kubernetes/infra/monitoring/kube-prometheus-stack/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
